// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/Users/umidbekkarimov/Documents/Projects/dcodeteam/ts2md/src/parser/parsers/__tests__ class-constructor.ts 1`] = `
Object {
  "nodes": Map {
    "Foo" => ClassParseResult {
      "constructors": Array [
        ConstructorParseResult {
          "accessibility": "public",
          "documentation": "",
          "documentationTags": Array [],
          "id": "constructor",
          "kind": 155,
        },
      ],
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "extendedClass": null,
      "id": "Foo",
      "implementedInterfaces": Array [],
      "kind": 238,
      "methods": Array [],
    },
  },
}
`;

exports[`/Users/umidbekkarimov/Documents/Projects/dcodeteam/ts2md/src/parser/parsers/__tests__ class-extends.ts 1`] = `
Object {
  "nodes": Map {
    "Foo" => ClassParseResult {
      "constructors": Array [],
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": false,
      "extendedClass": null,
      "id": "Foo",
      "implementedInterfaces": Array [],
      "kind": 238,
      "methods": Array [],
    },
    "Bar" => ClassParseResult {
      "constructors": Array [],
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "extendedClass": "Foo",
      "id": "Bar",
      "implementedInterfaces": Array [],
      "kind": 238,
      "methods": Array [],
    },
  },
}
`;

exports[`/Users/umidbekkarimov/Documents/Projects/dcodeteam/ts2md/src/parser/parsers/__tests__ class-implements.ts 1`] = `
Object {
  "nodes": Map {
    "Foo" => InterfaceParseResult {
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": false,
      "extendedInterfaces": Array [],
      "id": "Foo",
      "kind": 239,
    },
    "Bar" => InterfaceParseResult {
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": false,
      "extendedInterfaces": Array [],
      "id": "Bar",
      "kind": 239,
    },
    "Baz" => ClassParseResult {
      "constructors": Array [],
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "extendedClass": null,
      "id": "Baz",
      "implementedInterfaces": Array [
        "Foo",
        "Bar",
      ],
      "kind": 238,
      "methods": Array [],
    },
  },
}
`;

exports[`/Users/umidbekkarimov/Documents/Projects/dcodeteam/ts2md/src/parser/parsers/__tests__ class-methods.ts 1`] = `
Object {
  "nodes": Map {
    "Foo" => ClassParseResult {
      "constructors": Array [],
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "extendedClass": null,
      "id": "Foo",
      "implementedInterfaces": Array [],
      "kind": 238,
      "methods": Array [
        MethodParseResult {
          "accessibility": "public",
          "documentation": "",
          "documentationTags": Array [],
          "id": "bar",
          "kind": 154,
          "parameters": Array [],
          "returnType": "Promise<void>",
        },
        MethodParseResult {
          "accessibility": "protected",
          "documentation": "",
          "documentationTags": Array [],
          "id": "baz",
          "kind": 154,
          "parameters": Array [
            ParameterParseResult {
              "documentation": "",
              "documentationTags": Array [],
              "id": "foo",
              "kind": 149,
              "type": "number",
            },
          ],
          "returnType": "Promise<string>",
        },
        MethodParseResult {
          "accessibility": "private",
          "documentation": "",
          "documentationTags": Array [],
          "id": "quoz",
          "kind": 154,
          "parameters": Array [
            ParameterParseResult {
              "documentation": "",
              "documentationTags": Array [],
              "id": "foo",
              "kind": 149,
              "type": "string",
            },
          ],
          "returnType": "string",
        },
      ],
    },
  },
}
`;

exports[`/Users/umidbekkarimov/Documents/Projects/dcodeteam/ts2md/src/parser/parsers/__tests__ class-mixed-extends-and-implements.ts 1`] = `
Object {
  "nodes": Map {
    "Foo" => InterfaceParseResult {
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": false,
      "extendedInterfaces": Array [],
      "id": "Foo",
      "kind": 239,
    },
    "Bar" => InterfaceParseResult {
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": false,
      "extendedInterfaces": Array [],
      "id": "Bar",
      "kind": 239,
    },
    "Baz" => ClassParseResult {
      "constructors": Array [],
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": false,
      "extendedClass": null,
      "id": "Baz",
      "implementedInterfaces": Array [],
      "kind": 238,
      "methods": Array [],
    },
    "Quoz" => ClassParseResult {
      "constructors": Array [],
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "extendedClass": "Baz",
      "id": "Quoz",
      "implementedInterfaces": Array [
        "Foo",
        "Bar",
      ],
      "kind": 238,
      "methods": Array [],
    },
  },
}
`;
